--- a/report/egpaper_final.tex
+++ b/report/egpaper_final.tex
@@ -53,7 +53,7 @@ Demon Attack\\
 %%%%%%%%% BODY TEXT
 \section{Introduction}
 
-Reinforcement Learning is one of the most active research area in the deep learning community. Its main challenge is finding a way to optimize a target function, usually the cumulative sum of rewards obtained through the policy, through experience and without explicit supervision. This technology finds a variety of possible applications that include continuous control systems such as autonomous cars or robotic arms, stock trading agents or videogame agents. However, despite its relevancy it is only recently that major improvements have come from the research community allowing the achievement of significant results.
+Reinforcement Learning is one of the most active research area in the deep learning community. Its main challenge is finding a way to optimize a target function, usually the cumulative sum of rewards obtained through the policy, through experience and without explicit supervision. This technology finds a variety of possible applications that include continuous control systems such as autonomous cars or robotic arms, stock trading agents or videogame agents. However, despite its relevancy, it is only recently that major improvements have come from the research community allowing the achievement of significant results.
 In particular, the attention of our group was caught by the victory of novel RL systems in exceptionally challenging games such as Starcraft 2 (DeepMind, December 2018) and Dota 2 (OpenAI, April 2019) against professional players. In order to take a glimpse into the the world of reinforcement learning and try to give a little contribution to the field, we revisit the DQN architecture introduced by DeepMind in \cite{DBLP:journals/corr/MnihKSGAWR13}, and improved upon in \cite{DBLP:journals/corr/abs-1710-02298}. The objective is to train and tune agents able to play at human skill level or better a set of chosen Atari games using only raw pixel input, namely Ms-Pacman, Atlantis and Demon Attack. The task is expected to be particularly challenging for the Ms-Pacman game as shown in \cite{humancontrol} where the plain DQN approach is able to achieve only a reported 13\% performance compared to a human player.
 Another challenging element is computing time. RL training phases are computationally expensive and reference results taken from \cite{DBLP:journals/corr/abs-1710-02298} are given after 200 million training iterations. From our benchmarks and codebase, a system equipped with a RTX 2070 GPU can process ~70 frames per second, giving a projected time of 33 GPU days for training in order to emulate the results. This is a prohibitive time amount, so we need to take steps to increase convergence speed on each particular game.
 
@@ -66,14 +66,14 @@ We start with a tensorflow based hand implementation of a DQN as described in \c
 Unsurprisingly, this simple architecture is not satisfying, so we decide to implement the optimizations proposed in \cite{DBLP:journals/corr/abs-1710-02298} and generally referred to as Rainbow DQN. Due to the complexity of the first implementation and the need to migrate our codebase to the pytorch environment, we decide to base our implementation on top of the ptan agent library \cite{ptan}, taking \cite{packtrepo} as the initial codebase.
 
 We start by implementing and integrating together the N-Step, Double DQN and Noisy Layers optimizations, noticing improvements in the trained agent. In particular the $\epsilon$-greedy exploration strategy proposed in \cite{DBLP:journals/corr/MnihKSGAWR13} is particularly unsuited for Ms-Pacman. This exploration strategy causes a random action to happen with probability $1 - \epsilon$ and is necessary to avoid the agent from getting stuck in loops of actions while playing, but also causes death every time the agent is chased by a ghost, with the agent escaping successfully until the moment when a random action causes the agent to run into the ghost and be eaten.
-Noisy layers, on the other hand, work by perturbing the estimation of qvalues. When the agent is stuck in a loop of actions determined by similar qvalues the agent is still able to escape it thanks to the perturbations introduced by noisy layers, but when it is chased by a ghost and qvalues are far away from each other, the qvalue perturbations introduced by noise do not affect the choice of the agent to escape from the ghost.
+Noisy layers, on the other hand, work by perturbing the estimation of qvalues. When the agent is stuck in a loop of actions determined by similar qvalues, the agent is still able to escape it thanks to the perturbations introduced by noisy layers, but when it is chased by a ghost and qvalues are far away from each other, the qvalue perturbations introduced by noise do not affect the choice of the agent to escape from the ghost.
 Encouraged by the results, we decide to continue integrating the remaining rainbow improvements into our DQN architecture, but the likelihood to introduce subtle bugs in our implementation due to the complexity of the task lead us to use the rainbow agent implementation provided by our library as a base for the rest of the experiments.
 
 At this point each group member proceeds to tune the model to its environment.
 
 \subsubsection{Ms-Pacman}
 The agent trained on the rainbow model still shows unsatisfying behaviors after 70 hours of training. The agent learns to successfully eat dots across the maze and to eat the special pills that allow it to eat ghosts, but when the special pills terminate and few dots remain in the maze the agent seems unable to detect the presence of attacking ghosts and runs into them.
-An analysis of qvalues output by the network show the reason for the behavior. The reward system used for training clips rewards in the range (-1, 1), but never assigns a negative reward to the agent upon death. In an environment such as OpenAI Cartpole, where the agent continuously receives rewards, this is not a problem because death prevents the agent to accumulate future rewards, so qvalues diminish for actions that will lead to death. In our situation however, when there are no dots and special pills in close proximity, the correct qvalue to estimate is 0 for every action. When a ghost approaches the correct qvalue to estimate is still 0 for every action due to the absence of death penalties, so the agent may well decide to run into the ghost. Moreover, in the original game, there is a difference in color from ghosts that are eatable and ghosts that are not, but due to grayscale conversion we notice that there is only a subtle difference between eatable and not eatable ghosts which may further damage training.
+An analysis of qvalues output by the network show the reason for the behavior. The reward system used for training clips rewards in the range (-1, 1), but never assigns a negative reward to the agent upon death. In an environment such as OpenAI Cartpole, where the agent continuously receives rewards, this is not a problem because death prevents the agent to accumulate future rewards, so qvalues diminish for actions that will lead to death. In our situation however, when there are no dots and special pills in close proximity, the correct qvalue to estimate is 0 for every action. When a ghost approaches, the correct qvalue to estimate is still 0 for every action due to the absence of death penalties, so the agent may well decide to run into the ghost. Moreover, in the original game, there is a difference in color from ghosts that are eatable and ghosts that are not, but due to grayscale conversion we notice that there is only a subtle difference between eatable and not eatable ghosts which may further damage training.
 In order to address this problems we preprocess each frame in order to make eatable ghosts of a distinguishable gray tonality and we use a common technique in RL called reward reshaping, which consists in changing the rewards in order to drive the policy towards the wanted direction.
 Care has been taken in order not for expected qvalues to saturate the boundaries imposed to qvalues by the Distributional DQN modification. For the subsequent attempt the reward policy was reshaped in this way:
 \begin{itemize}
@@ -85,7 +85,7 @@ Care has been taken in order not for expected qvalues to saturate the boundaries
 	\item Finishing level $1 \rightarrow 7$
 \end{itemize}
 
-The results obtained with these settings however were not satisfying. An analysis of the behavior of the agent in fact highlighted that, due to the high death penalization, the agent was so hindered to get close to a ghost that it always tried to hide away from them, apparently ignoring nearby dots to eat and not making progress. Moreover, due to the relatively high special pill and ghost eating rewards, the agent tended to immediately eat all the available special pills, and be very aggressive with regards to eatable ghosts. While this strategy provided high game scores, our main objective was to make progress through different levels, so rewards were reshaped again to encourage a more gentle behavior:
+The results obtained with these settings, however, were not satisfying. An analysis of the behavior of the agent in fact highlighted that, due to the high death penalization, the agent was so hindered to get close to a ghost that it always tried to hide away from them, ignoring nearby dots to eat and not making progress. Moreover, due to the relatively high special pill and ghost eating rewards, the agent tended to immediately eat all the available special pills, and be very aggressive with regards to eatable ghosts. While this strategy provided high game scores, our main objective was to make progress through different levels, so rewards were reshaped again to encourage a more gentle behavior:
 \begin{itemize}
 	\item Eating dot $0.5 \rightarrow 0.5$
 	\item Eating pill $1 \rightarrow 0$
@@ -102,23 +102,21 @@ In order to aid convergence we also reduce the learning rate from $2e-5$ to $5e-
 
 \subsubsection{Atlantis}
 \label{atlantis}
-The choice of Atlantis is based on (guided by?) the $449.9\%$ performance obtained by the plain DQN approach compared to a human player as shown in \cite{humancontrol}.
+The choice of Atlantis is based on the $449.9\%$ performance obtained by the plain DQN approach compared to a human player as shown in \cite{humancontrol}.
  
-The game consists of defending the city of Atlantis, made of three defense posts and six Atlantean installations, from the Gorgon vessels. The game ends when the Acropolis Command Post and all six of Atlantis' installations are destroyed. 
+The game consists in defending the city of Atlantis, made of three defense posts that can be used by the player to attack enemies and six Atlantean installations, from the Gorgon vessels. The game ends when the Acropolis Command Post and all six of Atlantis' installations are destroyed. 
 
-In the original Rainbow DQN, observations are grey-scaled and rescaled to $84$ x $84$ pixels \cite{DBLP:journals/corr/abs-1710-02298}, however, it seems that this setting compresses the portion of the sky maintaining information, such as the score, that could be irrelevant to the agent. Based on that we decided to rescale observations  to $92$ x $84$ pixels maintaining only signicant parts of the frame.
+In the original Rainbow DQN, observations are grey-scaled and cropped to $84$ x $84$ pixels \cite{DBLP:journals/corr/abs-1710-02298}, however, this setting on Atlantis eliminates a relevant portion of the sky and maintains irrelevant information at the bottom such as the score. Based on that, we decided to crop observations to $92$ x $84$ pixels maintaining only signicant information in the frame.
 
-Gorgon vessels circle down from the highest level to the one closest to Atlantis and can only fire the deathray when close to the city. This attitude seems suitable to be learned by a network. Since the first hours of training, the agent learns to successfully destroy Gorgon vessels, reaching scores above the ones obtained by a professional human games tester as shown in \cite{humancontrol}.  One of the most notable aspects encountered during the training was the discovery of a bug in the system: one of the six Atlantean installations could not be demolished. This allows the agent to obtain the maximum possible score in the game. Although this strategy leads to the highest possible game score, the main objective was to make the agent strong enough to not rely on this shortcut and we decided to proceed with the training. This choice proved to be successful in improving the policy of the agent: the game score obtained is still the highest possible, but now the agent does not rely on the bug and concludes the game episode with all seven installations being untoched for most of the time. Another significant aspect is that the agent mainly uses the Acropolis Command Post and the right sentry post to defend all the Atlantis' installations.
+Gorgon vessels circle down from the highest level to the one closest to Atlantis and can only fire their deathray when close to the city. Since the first hours of training, the agent learns to successfully destroy Gorgon vessels, reaching scores above the ones obtained by a professional human games tester as shown in \cite{humancontrol}.  One of the most notable aspects encountered during the training was the discovery of a bug in the system that prevents one of the six Atlantean installations to be demolished. Although this strategy leads to the highest possible game score, the main objective was to make the agent strong enough to not rely on this shortcut and we decided to proceed with the training. This choice proved to be successful in improving the policy of the agent: the game score obtained is still the highest possible, but now the agent does not rely on the bug and concludes the game episode with all seven installations being untoched for most of the time. Another significant aspect is that the agent mainly uses the Acropolis Command Post and the right sentry post to defend all the Atlantis' installations.
 
 \subsubsection{Demon Attack}
 \label{demon_attack}
-The third game to which we tried to apply the Rainbow DQN architecture is Demon Attack.
+The third game to which we try to apply the Rainbow DQN architecture is Demon Attack. The game mechanics are pretty simple. The player controls a space ship which can be moved horizontally across the playing field. The objective is to shoot down all the enemy spaceships, while avoiding their attacks. As the game progresses the enemies become stronger and stronger, they gain movement speed and use different attack patterns.
 
-The game mechanics are pretty simple. The player controls a space ship which can be moved horizontally across the playing field. The objective is to shoot down all the enemy spaceships, while avoiding their attacks. As the game progresses the enemies become stronger and stronger, they gain movement speed and use different attack patterns.
+Initially, the training of the network for this game was done using Google Colab due to the fact that some of our laptops were not powerful enough to sustain the training at an acceptable speed. Unfortunately, Google Colab has strict limits on how long a program can run. This meant that we had to restart the training every few hours slowing down the process. Furthermore, we noticed that checkpoint restarts cause problems with the implementation of the prioritized replay buffer used by our library, probably due to a sub-optimal initialization of buffer weights. Although it would be possible to save the state of the buffer as a part of the checkpoint, we decided to resort to the plain replay buffer to avoid saving a component of the size of tens of gigabytes.
 
-Initially the training of the network for this game was done using Google Colab, this was due to the fact that some of our laptops were not powerful enough to sustain the training at a acceptable speed. Unfortunately Google Colab has strict limits on how long a program can run, this meant that we had to restart the training every few hours which slowed down the process quite a lot. Furthermore with this approach we could not make use of the prioritized buffer optimization because restarting the training of the network from a checkpoint, caused weird behavior in the training process so we had to resort to the normal replay buffer.
-
-As a second approach we retrained the whole network during the weekend using more a pore powerful machine available at home. This time we trained the network for approximately 72 hours consecutively on a machine with a GTX 960 GPU, although not as performing as the RTX 2070 and far from the performance of the Tesla T4 provided by Colab, it was still able to process 20 frames every second. With this approach we could also make use of the prioritized buffer which, as described in the result section, improved noticeably the performance of the network.
+As a second approach, we retrained the whole network during the weekend using more a pore powerful local machine. This time, we trained the network for approximately 72 hours consecutively on a machine with a GTX 960 GPU which, although not as performing as the RTX 2070 and far from the performance of the Tesla T4 provided by Colab, was still able to process 20 frames per second. With this approach, we could also make use of the prioritized buffer which, as described in the result section, improved noticeably the performance of the network.
 
 \subsection{Results}
 
@@ -126,7 +124,7 @@ As a second approach we retrained the whole network during the weekend using mor
 
 Table \ref{tab:pacman_results} shows average scores obtained by each agent we trained on Ms-Pacman.
 
-\begin{table})
+\begin{table}
 	\begin{center}
 		\begin{tabular}{ |c|c|c|c| } 
 			\hline
@@ -146,20 +144,19 @@ Table \ref{tab:pacman_results} shows average scores obtained by each agent we tr
 
 Notably, the reward reshaping and frame preprocessing approach we used to train our final agent version allowed the network to obtain an average score of 5145 after 22.9M training iteration. For comparison \cite{DBLP:journals/corr/abs-1710-02298} reports an average 5380.4 score on Ms-Pacman after 200M training iterations which we consider a success given our limited computational resources.
 The score corresponds to reaching on average the end of level 2 and sometimes reaching level 3. Interestingly, Ms-Pacman level 3 has a different color pattern and maze structure which may be the reason why the agent struggles to gather further reward. Modifying the Ms-Pacman emulator to start from level 3 instead of level 1 with a certain probability may allow the agent to gather more samples from this level and continue its improvements.
-Moreover, \cite{DBLP:journals/corr/WangFL15} and \cite{humancontrol} reports an average human score for Ms-Pacman of respectively 6951.6 and 15693, meaning we are are not still able to reach human level behavior, but the result is satisfying.
+Moreover, \cite{DBLP:journals/corr/WangFL15} and \cite{humancontrol} reports an average human score for Ms-Pacman of respectively 6951.6 and 15693, meaning we are are still not able to reach human level behavior, but the result is satisfying.
 
 \subsubsection{Atlantis}
-DeepMind reports an average score for Rainbow on Atlantis over 200 testing episodes of $826,659.5$ \cite{DBLP:journals/corr/abs-1710-02298}. The frame preprocessing approach we used to train our agent allowed the network to obtain an average score of $1,000,000$ after $6.6$M training iterations without exploiting the bug mentioned in \ref{atlantis}. Despite the left sentry post is not as precise as the others,  proceeding with the training of the network should solve this problem.
+DeepMind reports an average score for Rainbow on Atlantis over 200 testing episodes of $826,659.5$ \cite{DBLP:journals/corr/abs-1710-02298}. The frame preprocessing approach we used to train our agent allowed the network to obtain an average score of $1,000,000$ after $6.6$M training iterations without exploiting the bug mentioned in \ref{atlantis} despite the left sentry post is not as precise as the others.  Proceeding with the training of the network should solve this problem.
 
 \subsubsection{Demon Attack} 
-With the first approach we were able to obtain a mean score of $6500$ after approximately $30$ hours of training ($6.9$M frames processed). At this point the network performance was not improving quite as fast and consistently even with more training time. Our intuition was that the network had difficulty defeating the stronger enemies encountered later in the game, due to the fact that their attack pattern was different from all the one seen up to that point and the network didn't encounter this enemy frequently enough to be able to device a good strategy for defeating them.
+With the first approach we were able to obtain a mean score of $6500$ after approximately $30$ hours of training ($6.9$M frames processed). At this point, the network performance was not improving consistently even with more training time. Our intuition was that the network had difficulty defeating the stronger enemies encountered later in the game, due to the fact that their attack pattern was different from all the one seen up to that point and the network didn't encounter this enemy frequently enough to be able to devise a good strategy for defeating them.
 
 With the second approach instead after $72$ hours of training ($4.1$M frames processed) we were able to push the mean score up to $9500$ which is a considerable improvement over the previous attempt, taking into account also the fact that fewer frames were processed by the network.
 
-The scores obtained are quite lower than the one obtained by \cite{DBLP:journals/corr/abs-1710-02298}. In fact we noticed that the network had a problem learning one particular attack pattern used in the late game which is visually similar to the previous attack but works quite differently: while all other attack move only vertically, this attack is new in the sense that it can track the player and follow him horizontally, so for the agent it's quite more difficult to avoid.
+The scores obtained are lower than the one obtained by \cite{DBLP:journals/corr/abs-1710-02298}. In fact, we noticed that the network had a problem learning one particular attack pattern used in the late game which is visually similar to the previous attack but works differently: while all other attacks move only vertically, this attack can track the player and follow him horizontally, so for the agent it's more difficult to avoid.
 
-Because of the huge time requirement and hardware availability, we were not able to train the network any further. Nevertheless the result obtained are encouraging and training even more the network would probably allow the agent to learn the advanced attack patterns and obtain much higher scores.
-
+Because of the huge time requirement and hardware availability, we were not able to train the network any further. Nevertheless, the results obtained are encouraging and training even more the network would probably allow the agent to learn the advanced attack patterns and obtain much higher scores.
 
 {\small
 \bibliographystyle{ieee}
